# vtt-mcp

./: .gitignore  .goosehints  .swp  AGENTS.md  Cargo.toml  ERROR_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MICROPHONE_DIAGNOSIS.md  MULTI_CLIENT_AUDIO.md  PIPEWIRE_MIGRATION_PLAN.md  PIPEWIRE_STATUS.md  PLAN.md  README.md  TESTING_WITHOUT_MIC.md  TODO.md  TRANSCRIPT_HISTORY_IMPLEMENTATION.md  build_appimage.sh  deploy_vtt_mcp.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.goose/recipes/: research-sota-main.yaml
.goose/recipes/research-sota/subrecipes/: 00-normalize-inputs.yaml  01-discover-sources.yaml  02-triage-and-rank.yaml  03-fetch-and-extract.yaml  04-sota-synthesis-by-topic.yaml  05-goal-strategies.yaml  06-bibliography-and-qc.yaml
.goose/skills/beads-pr-prepare/: SKILL.md
.goose/skills/beads-pr-prepare/templates/: pr-body.md
.goose/skills/beads-session-sync/: SKILL.md
.goose/skills/beads-task-create/: SKILL.md
.goose/skills/beads-task-dep-add/: SKILL.md
.goose/skills/beads-task-ready/: SKILL.md
.goose/skills/beads-task-show/: SKILL.md
.goose/skills/task-spec/: SKILL.md
.tooling/playwright/: Dockerfile  screenshot.js
crates/vtt-cli/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/vtt-cli/src/: main.rs
crates/vtt-core/: Cargo.toml  WHISPER_IMPLEMENTATION.md
crates/vtt-core/examples/: benchmark.rs  test_whisper_api.rs  vad_test.rs  whisper_test.rs
crates/vtt-core/src/: lib.rs
crates/vtt-core/src/audio/: capture.rs  cpal_capture.rs  device.rs  error.rs  format.rs  mod.rs  pipewire_capture.rs  writer.rs
crates/vtt-core/src/config/: loader.rs  mod.rs  schema.rs
crates/vtt-core/src/incremental/: mod.rs  transcriber.rs
crates/vtt-core/src/profile/: mod.rs
crates/vtt-core/src/vad/: detector.rs  mod.rs
crates/vtt-core/src/whisper/: config.rs  context.rs  downloader.rs  error.rs  gpu.rs  language.rs  memory.rs  mod.rs
crates/vtt-core/src/window/: buffer.rs  mod.rs
crates/vtt-core/tests/: audio_integration.rs
crates/vtt-mcp/: Cargo.toml  vtt-mcp.service
crates/vtt-mcp/src/: error.rs  lib.rs  main.rs  server.rs
crates/vtt-mcp/src/tools/: echo.rs  mod.rs
crates/vtt-mcp/tests/: integration_tests.rs
debian/: postinst  postrm  preinst  prerm
docs/: API.md  ARCHITECTURE.md  LANGUAGES.md  PHASE1_REPORT.md  RMCP_INVESTIGATION.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md  mcp-integration.md  performance-report-phase4.md  task-vtt-mcp-csh.3.7-summary.md
docs/tasks/vtt-mcp-csh.1.3/: 01-error-analysis.md  02-implementation-summary.md  03-microphone-diagnosis.md  04-multi-client-audio.md  05-pipewire-migration-plan.md  06-testing-without-mic.md  README.md  implementation-log.md  pipewire-status.md
examples/: config.toml
flatpak/: org.dikini.VttMCP.json
research/: STT_RESEARCH_REPORT.md  architecture_diagram.md  dependency_guide.md
scripts/: README.md  benchmark.sh  bootstrap-beads-goose.sh  create_beads_tasks.sh  create_beads_tasks_p3p4.sh  create_beads_tasks_p5.sh  download-whisper-model.sh  init-beads-goose.sh  install.sh  quick-install.sh
specs/: task-csh.1.1.md  task-csh.1.2.md  task-csh.1.3.md  task-csh.1.4.md  task-csh.2.1.md  task-csh.3.1.md  task-csh.3.2.md  task-csh.3.3.md  task-csh.3.4.md  task-csh.3.5.md  task-csh.3.6.md  task-csh.3.7.md  task-csh.4.1.md  task-csh.4.2.md  task-csh.4.3.md  task-vtt-mcp-csh.4.3.md  task4.4.md  task4.5.md  task5.md
tests/: integration_test.rs
