[workspace]
members = [
    "crates/vtt-core",
    "crates/vtt-mcp",
    "crates/vtt-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["VTT-MCP Contributors"]

[workspace.dependencies]
# Common dependencies will be added in task vtt-mcp-csh.1.2
