[workspace]
members = [
    "crates/vtt-core",
    "crates/vtt-mcp",
    "crates/vtt-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["VTT-MCP Contributors"]

[workspace.dependencies]
# Audio processing
cpal = "0.15"
hound = "3.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
