[package]
name = "vtt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cpal.workspace = true
hound.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { version = "1.35", features = ["sync", "macros", "test-util", "time", "fs", "io-util"] }
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
whisper-rs = { version = "0.15.1", default-features = false }
num_cpus = "1.16"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"

[features]
default = []
cuda = ["whisper-rs/cuda"]
