# Voice-to-Text MCP Server

[package]
name = "vtt-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
vtt-core = { path = "../vtt-core" }
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.35", features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
schemars = "1.1"
serde = "1.0"
serde_json = "1.0"
hound = "3.5"  # WAV file reading
num_cpus = "1.16"

# cargo-deb configuration
[package.metadata.deb]
name = "vtt-mcp"
maintainer = "VTT-MCP Contributors <info@example.com>"
copyright = "2025, VTT-MCP Contributors"

[package.metadata.deb]
name = "vtt-mcp"
maintainer = "VTT-MCP Contributors <info@example.com>"
copyright = "2025, VTT-MCP Contributors"
license = "GPL-3.0"
description = "Voice-to-Text MCP Server"
extended-description = "vtt-mcp provides real-time transcription"
homepage = "https://github.com/your-org/vtt-mcp"
section = "utils"

[package.metadata.deb.dependencies]
deb = "libc6 (>= 2.27)"

[package.metadata.deb.build-dependencies]
deb = "clang, libssl-dev, pkg-config"

assets = [
    ["target/release/vtt-mcp", "usr/bin/", "755"],
    ["target/release/vtt-cli", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/vtt-mcp/", "644"],
    ["../../LICENSE", "usr/share/doc/vtt-mcp/", "644"],
    ["debian/vtt-mcp.service", "lib/systemd/system/", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "vtt-mcp"
unit-scripts = "debian/"
enable = false

[package.metadata.deb.maintainer-scripts]
pre-install = "debian/preinst"
post-install = "debian/postinst"
pre-remove = "debian/prerm"
post-remove = "debian/postrm"
