# Voice-to-Text MCP Server

[package]
name = "vtt-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
vtt-core = { path = "../vtt-core" }
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.35", features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
schemars = "1.1"
serde = "1.0"
serde_json = "1.0"
hound = "3.5"
num_cpus = "1.16"

[package.metadata.deb]
name = "vtt-mcp"
maintainer = "VTT-MCP Contributors <info@example.com>"
copyright = "2025, VTT-MCP Contributors"
extended-description = "vtt-mcp provides real-time transcription using Whisper"
section = "utils"
depends = "libc6 (>= 2.27), libasound2, libpipewire-0.3-0"
assets = [
    ["target/release/vtt-mcp", "usr/bin/", "755"],
    ["target/release/vtt-cli", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/vtt-mcp/", "644"],
    ["../../LICENSE", "usr/share/doc/vtt-mcp/", "644"],
    ["vtt-mcp.service", "lib/systemd/system/", "644"],
]
